--- a/index.html
+++ b/index.html
@@ -3,33 +3,59 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>FX-ULTRA 外汇策略、指标与 MT5 智能交易机器人</title>
-  <meta name="description" content="FX-ULTRA：外汇策略、技术指标与 MetaTrader 5 智能交易机器人（EA）。这是中文入口与链接聚合页。">
+  <title>FX-ULTRA 外汇智能交易系统（中文）— MT5 交易机器人、策略与指标</title>
+  <meta name="description" content="FX-ULTRA 中文页：提供 MetaTrader 5 (MT5) 智能交易机器人 FX‑ULTRA MAX、外汇交易策略、技术指标与实时信号。点击进入 fx‑ultra.com/zh 获取详细说明与下载。">
+  <meta name="keywords" content="FX-ULTRA, 外汇, MT5, 智能交易, 交易机器人, EA, 外汇策略, 技术指标, 外汇信号">
+  <meta name="robots" content="index,follow">
   <link rel="canonical" href="https://fx-ultra.com/zh/">
   <style>
-    body{font-family: system-ui, -apple-system, Segoe UI, Roboto, PingFang SC, Noto Sans SC, Helvetica, Arial, sans-serif;max-width:900px;margin:40px auto;padding:0 16px;line-height:1.6}
-    h1{font-size:1.9rem;margin-bottom:.6rem}
-    h2{margin-top:1.6rem}
+    body{font-family: system-ui, -apple-system, Segoe UI, Roboto, PingFang SC, Noto Sans SC, Helvetica, Arial, sans-serif;max-width:960px;margin:40px auto;padding:0 16px;line-height:1.68}
+    h1{font-size:2rem;margin:0 0 .75rem}
+    h2{margin:1.6rem 0 .6rem}
     .links a{display:block;margin:8px 0;text-decoration:none}
-    footer{margin-top:2rem;font-size:.9rem;color:#555}
+    .note{background:#f6f8fa;border:1px solid #e6e8eb;border-radius:8px;padding:12px 14px;margin-top:14px}
+    footer{margin-top:2rem;font-size:.9rem;color:#666}
   </style>
+  <!-- 简单结构化数据（对百度友好） -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "FX-ULTRA",
+    "url": "https://fx-ultra.com/",
+    "sameAs": [
+      "https://fx-ultra.com/zh/",
+      "https://fx-ultra.com/"
+    ]
+  }
+  </script>
 </head>
 <body>
-  <h1>FX-ULTRA 外汇策略、指标与 MT5 智能交易机器人</h1>
-  <p>这是 FX-ULTRA 的中文入口页。以下为中文站点与主要页面链接：</p>
+  <h1>FX-ULTRA 外汇智能交易系统（中文）</h1>
+  <p>欢迎访问 FX‑ULTRA 中文索引页。本页用于帮助中文搜索引擎（如百度）快速发现并收录
+  <strong>FX‑ULTRA MAX MT5 智能交易机器人</strong>、<strong>外汇交易策略</strong>、<strong>技术指标</strong> 与 <strong>实时信号</strong> 的中文文档。
+  所有正式内容均托管在 <code>fx-ultra.com/zh</code>，请通过以下入口访问。</p>
+
   <div class="links">
-    <a href="https://fx-ultra.com/zh/">中文官网主页（fx-ultra.com/zh/）</a>
+    <a href="https://fx-ultra.com/zh/">👉 中文官网主页（fx-ultra.com/zh/）</a>
     <a href="https://fx-ultra.com/zh/strategies/">策略列表（/zh/strategies/）</a>
     <a href="https://fx-ultra.com/zh/indicators/">技术指标（/zh/indicators/）</a>
     <a href="https://fx-ultra.com/zh/signals">外汇信号（/zh/signals）</a>
-    <a href="https://fx-ultra.com/sitemap-zh.xml">网站地图（中文）</a>
-    <a href="https://fx-ultra.com/sitemap.xml">网站地图（全部）</a>
+    <a href="https://fx-ultra.com/sitemap-zh.xml">网站地图（中文 sitemap-zh.xml）</a>
+    <a href="https://fx-ultra.com/sitemap.xml">网站地图（全部语言）</a>
   </div>
 
-  <h2>关于 FX-ULTRA</h2>
-  <p>FX-ULTRA 提供多语言外汇策略文档、技术指标、实时信号，以及基于 MetaTrader 5 的自动化交易机器人（EA）。
-  如果您在中国大陆访问，请优先从本页进入中文站点链接。</p>
+  <h2>为什么选择 FX‑ULTRA？</h2>
+  <ul>
+    <li>面向 MT5 的自动化交易系统（EA），支持长期稳定运行与风控设置。</li>
+    <li>提供成体系的中文策略与指标文档，便于复现与回测。</li>
+    <li>实时信号与说明页面，帮助快速上手与验证。</li>
+  </ul>
 
-  <footer>© 2025 FX-ULTRA · github.io 信标页（用于搜索引擎发现中文内容）</footer>
+  <div class="note">
+    <strong>提示：</strong> 如果您来自中国大陆，建议直接进入以上 <b>中文官网</b> 链接浏览。该页面仅作为搜索引擎抓取与导航之用。
+  </div>
+
+  <footer>© 2025 FX‑ULTRA · GitHub Pages 信标页（用于中文收录）</footer>
 </body>
 </html>
